--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,12 @@
 @import "./reset";
 @import "font-awesome";
-@import "colors";
-@import "font-size";
+@import "config/colors";
+@import "modules/flash";
+@import "config/font-size";
 @import "modules/chat-side";
 @import "modules/chat-main";
+@import "modules/user";
+@import "modules/group";
 @import "messages";
 *{
   box-sizing: border-box;
