group-on-sidebar
作成したグループをサイドバーへ表示する

--- a/app/assets/stylesheets/modules/chat-side.scss
+++ b/app/assets/stylesheets/modules/chat-side.scss
@@ -54,6 +54,7 @@
       overflow: scroll;
       &__group-name {
         font-size: $side_group_name;
+        color: $white;
         font-weight: bold;
         padding-bottom: 5px;
       }
@@ -61,6 +62,7 @@
         font-size: 11px;
         font-weight: bold;
         padding-bottom: 40px;
+        color: $white;
       }
     }
 }
