--- a/app/views/shared/_chat-side.html.haml
+++ b/app/views/shared/_chat-side.html.haml
@@ -11,15 +11,9 @@
           = link_to edit_user_path(current_user) do
             = fa_icon 'cog', class: 'icon'
   .group
-    .group__group-name
-      グループ名
-    .group__latest-message
-      おはようございます
-    .group__group-name
-      グループ名2
-    .group__latest-message
-      こんにちは
-    .group__group-name
-      グループ名3
-    .group__latest-message
-      こんばんは
+    - current_user.groups.each do |group|
+      = link_to '#' do
+        .group__group-name
+          = group.name
+        .group__latest-message
+          メッセージはありません
