--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,8 +1,7 @@
-.flash-box
-  .notice
-    グループを作成しました
 .wrapper
+
   = render 'shared/chat-side'
+
   .chat-main
     .main-header
       .main-header__left-box
@@ -12,24 +11,13 @@
           Member: eve
       .main-header__edit-btn
         Edit
-    .message
-      .message__upper-info__talker
-        eve
-      .message__upper-info__date
-        2019/10/10(Tru) 10:10:10
-      .message__text
-        おはようございます
-      .message__upper-info__talker
-        eve
-      .message__upper-info__date
-        2019/10/10(Tru) 20:20:20
-      .message__text
-        こんにちは
+    .messages
+      = render @messages
     .form
-      %form
-        %input.form__message{placeholder: "Type a text"}
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
         .form__mask
-          %label.form__mask__image
-            =fa_icon 'picture-o', class: 'icon'
-            %input.hidden{type: 'file'}
-        %input.form__submit{type: 'submit', value: 'send'}
+          = f.label :image, class: 'form__mask__image' do
+            = fa_icon 'picture-o', class: 'icon'
+            = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
