--- a/app/views/shared/_chat-side.html.haml
+++ b/app/views/shared/_chat-side.html.haml
@@ -10,10 +10,11 @@
         %li.side-header__box__menu__edit-user
           = link_to edit_user_path(current_user) do
             = fa_icon 'cog', class: 'icon'
-  .group
+  .groups
     - current_user.groups.each do |group|
-      = link_to '#' do
-        .group__group-name
-          = group.name
-        .group__latest-message
-          メッセージはありません
+      .group
+        = link_to groups_path(group) do
+          .group__group-name
+            = group.name
+          .group__latest-message
+            = group.show_last_message
