--- a/app/assets/stylesheets/modules/chat-main.scss
+++ b/app/assets/stylesheets/modules/chat-main.scss
@@ -35,28 +35,33 @@
       color: $light_blue;
     }
   }
-  .message {
+  .messages {
     height: calc(100vh - 190px);
     padding: 46px 20px 0px 20px;
-    &__upper-info__talker {
-      display: inline;
-      font-size: $side_header_font;
-      color: #434A54;
-      margin-bottom: 10px;
-      float: left;
-      font-weight: bold;
-    }
-    &__upper-info__date {
-      padding: 0px 0px 0px 10px;
-      display: inline;
-      display: flex;
-      font-size: 12px;
-      color: #999999
-    }
-    &__text {
-      padding: 10px 20px 40px 20px;
-      font-size: 14px;
-      color: #434A54;
+    box-sizing: border-box;
+    overflow: scroll;
+    .message {
+      display:  flex;
+      &__upper-info__talker {
+        display: inline;
+        font-size: $side_header_font;
+        color: #434A54;
+        margin-bottom: 10px;
+        float: left;
+        font-weight: bold;
+      }
+      &__upper-info__date {
+        padding: 0px 0px 0px 10px;
+        display: inline;
+        display: flex;
+        font-size: 12px;
+        color: #999999
+      }
+      &__text {
+        padding: 10px 20px 40px 20px;
+        font-size: 14px;
+        color: #434A54;
+      }
     }
   }
   .form {
