--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,15 +6,12 @@
     .main-header
       .main-header__left-box
         .main-header__left-box__current-group
-          グループ名
         .main-header__left-box__member-list
-          Member: eve
       .main-header__edit-btn
-        Edit
     .messages
       = render @messages
     .form
-      = form_for [@group, @message] do |f|
+      = form_for [@group, @message], html: {id: 'form__message'} do |f|
         = f.text_field :content, class: 'form__message', placeholder: 'type a message'
         .form__mask
           = f.label :image, class: 'form__mask__image' do
