--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -34,7 +34,7 @@
               %input{name: "group[user_ids][]", type: "hidden", value: user.id}
               %p.chat-group-user__name
                 = user.name 
-              %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
+              %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn{"data-user-name": "#{user.name}","data-user-id": "#{user.id}"}
                 削除
 
   .chat-group-form__field.clearfix
